# s7

./: CM_patterns.scm  COPYING  DotEmacs  HISTORY.Snd  NEWS  README.Snd  README.md  _sndlib.h  analog-filter.scm  animals.scm  audio.c  autosave.scm  bandedwg.cms  bess.rb  bess.scm  bess1.rb  bess1.scm  big-gens.scm  binary-io.scm  bird.fsm  bird.scm  bowl.cms  case.scm  clean.scm  clm-ins.fs  clm-ins.rb  clm-ins.scm  clm-strings.h  clm.c  clm.fs  clm.h  clm.rb  clm23.scm  clm2xen.c  clm2xen.h  cload.scm  cmn-glyphs.lisp  configure  configure.ac  coretemp.scm  (+255 more)
s7webserver/: Makefile  README  s7webserver.cpp  s7webserver.h  s7webserver_repl.py
sndins/: README  sndins.c  sndins.h
sndins/samples/: agn.fth  agn.rb  agn.scm  fmviolin.fth  fmviolin.rb  fmviolin.scm
tools/: README  auto-tester.scm  check-sigs.scm  compare-calls.scm  compsnd  crossref.c  dup.scm  fbench.scm  ffitest.c  gcall.c  gdbinit  gldata.scm  grepl.c  gtest.scm  gtk-header-diffs  make-config-pc.rb  make-index.scm  make-snd-diffs  makegl.scm  makexg.scm  sam.c  sarchive  sed.scm  snd.supp  t101.scm  table.scm  tall.scm  tauto.scm  tbig.scm  tclo.scm  tcopy.scm  teq.scm  tests7  testsnd  tfft.scm  tform.scm  tgc.scm  tgen.scm  thash.scm  tio.scm  (+19 more)
